--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <link href="css/icons.css" rel="stylesheet" type="text/css" />
     <link
-      href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&amp;subset=latin,cyrillic-ext"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&amp;subset=latin,cyrillic-ext"
       rel="stylesheet"
       type="text/css"
     />
