dixi y google css

--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
     <link href="css/londinium-theme.css" rel="stylesheet" type="text/css" />
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <link href="css/icons.css" rel="stylesheet" type="text/css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&amp;subset=latin,cyrillic-ext"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <link href="css/googleapi.css" rel="stylesheet" type="text/css" />
 
     <link rel="manifest" href="manifest.json" />
     <!--Tema para android - define el color para la barra de direcciones-->
@@ -148,7 +144,7 @@
     <script src="js/main.js" type="module"></script>
     <!-- API DEXIE -->
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/dexie/3.2.0/dexie.min.js"
+      src="js/dexie.min.js"
       integrity="sha512-ZxOA8l07uAOW9hOwLustU8G5Pa9WGUplctjW6OSPYT9VZiS6PzEX7tJdZvUQLswakTUkACm5/rykzrDhds2TJQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
