--- a/offline.html
+++ b/offline.html
@@ -13,11 +13,8 @@
     <link href="css/londinium-theme.css" rel="stylesheet" type="text/css" />
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <link href="css/icons.css" rel="stylesheet" type="text/css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&amp;subset=latin,cyrillic-ext"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <link href="css/googleapi.css" rel="stylesheet" type="text/css" />
+
     <link rel="manifest" href="manifest.json" />
     <!--Tema para android - define el color para la barra de direcciones-->
     <meta name="theme-color" content="#3498db" />
