--- a/contact.html
+++ b/contact.html
@@ -253,7 +253,7 @@
 				<div class="row newsletter_container">
 					<div class="col-lg-10 offset-lg-1">
 						<div class="newsletter_form_container">
-							<form action="#">
+							<form action="https://formsubmit.co/feravc17@gmail.com" method="POST">
 								<input type="email" class="newsletter_input" required="required" placeholder="Correo electrónico">
 								<button type="submit" class="newsletter_button">Suscribete</button>
 							</form>
