--- a/contact.html
+++ b/contact.html
@@ -255,7 +255,7 @@
 						<div class="newsletter_form_container">
 							<form action="https://formsubmit.co/feravc17@gmail.com" method="POST">
 								<input type="email" class="newsletter_input" required="required" placeholder="Correo electrónico">
-								<button type="submit" class="newsletter_button">Suscribete</button>
+								<button type="submit" class="newsletter_button">Suscríbete</button>
 							</form>
 						</div>
 						
