--- a/categories.html
+++ b/categories.html
@@ -456,18 +456,15 @@
 				<div class="row">
 					<div class="col">
 						<div class="section_title_container text-center">
-							<div class="section_subtitle">accesorios 100% ARTESANALES</div>
-							<div class="section_title">Recibe info de nuestra stock</div>
+							
+							<div class="section_title">accesorios 100% ARTESANALES</div>
 						</div>
 					</div>
 				</div>
 				<div class="row newsletter_container">
 					<div class="col-lg-10 offset-lg-1">
 						<div class="newsletter_form_container">
-							<form action="#">
-								<input type="email" class="newsletter_input" required="required" placeholder="Correo electrónico">
-								<button type="submit" class="newsletter_button">suscríbete</button>
-							</form>
+							
 						</div>
 						<div class="newsletter_text"></div>
 					</div>
