--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
             <input
               type="button"
               value="Enviar"
-              class="btn btn-success"
+              class="btn btn-warning"
               id="guardar"
             />
 
