--- a/pages/offline.html
+++ b/pages/offline.html
@@ -15,8 +15,9 @@
     <h1>Offline File</h1>
     <hr>
     <p class="text-warning">Por favor, vuelva cuando tenga internet</p>
-
+    <img src="images/offline.jpg" alt="offline" class="img-fluid" />
    
-
+    
 </body>
+<script src="js/app.js"></script>
 </html>
