--- a/contact.html
+++ b/contact.html
@@ -136,21 +136,21 @@
         </div>
       </form>
 
-      <!-- Default table 
+       Default table 
       <div class="panel panel-default">
         <div class="panel-heading">
           <h6 class="panel-title">
-            <i class="icon-table2"></i> Mensajes Registrados
+            <i class="icon-table2"></i> Escribe un comentario
           </h6>
         </div>
         <div class="table-responsive">
           <table class="table">
             <thead>
               <tr>
-                <th>ID</th>
+                
                 <th>Nombre</th>
                 <th>Correo</th>
-                <th>Mensaje</th>
+                <th>Comentario</th>
               </tr>
             </thead>
             <tbody id="tbody">
@@ -177,7 +177,7 @@
                     ><i class="icon-minus"></i
                   ></a>
                 </td>
-              </tr>-->
+              </tr>
             </tbody>
           </table>
         </div>
