--- a/contact.html
+++ b/contact.html
@@ -93,15 +93,12 @@
 			<div class="row">
 				<div class="col">
 					<div class="review_form_container">
-						<div class="review_form_title">escríbenos <br><br>un mensaje</div>
+						<div class="review_form_title">escríbe <br><br>un comentario</div>
 						<br><br>
 	<form role="form">
         <div class="block">
 
-          <div class="form-group">
-            <label>Clave:</label>
-            <input type="text" class="form-control" id="clave" readonly />
-          </div>
+          
 
           <div class="form-group">
             <label>Nombre:</label>
@@ -114,7 +111,7 @@
           </div>
 
           <div class="form-group">
-            <label>Mensaje:</label>
+            <label>Comentario:</label>
             <textarea
               rows="7"
               cols="7"
@@ -136,11 +133,11 @@
         </div>
       </form>
 
-       Default table 
+      
       <div class="panel panel-default">
         <div class="panel-heading">
           <h6 class="panel-title">
-            <i class="icon-table2"></i> Escribe un comentario
+            <i class="icon-quote-right"></i> Comentarios:
           </h6>
         </div>
         <div class="table-responsive">
@@ -154,7 +151,7 @@
               </tr>
             </thead>
             <tbody id="tbody">
-			-->
+			
               <!--<tr>
                 <td>1</td>
                 <td>Chocolate</td>
