--- a/contact.html
+++ b/contact.html
@@ -174,7 +174,7 @@
                     ><i class="icon-minus"></i
                   ></a>
                 </td>
-              </tr>
+              </tr>-->
             </tbody>
           </table>
         </div>
@@ -182,6 +182,7 @@
           <center id="siRegistros" />
         </div>
       </div>
+	  <!-- /default table -->
 						</div>
 					</div>
 				</div>
