--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <h6 class="panel-title">
-            <i class="icon-table2"></i> Mensajes registrados
+            <i class="icon-table2"></i> Comentarios registrados
           </h6>
         </div>
         <div class="table-responsive">
@@ -147,7 +147,7 @@
               <tr>
                 <th>Nombre</th>
                 <th>Correo electrónico</th>
-                <th>Mensaje</th>
+                <th>Comentario</th>
                 
               </tr>
             </thead>
