--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <h6 class="panel-title">
-            <i class="icon-quote-right"></i> Sus comentarios
+            <i class="icon-heart"></i> Sus comentarios
           </h6>
         </div>
         <div class="table-responsive">
