--- a/contact.html
+++ b/contact.html
@@ -102,13 +102,10 @@
 
           <div class="form-group">
             <label>Nombre:</label>
-            <input type="text" class="form-control" id="nombre" />
+            <input type="text" class="form-control" id="nombre" required/>
           </div>
 
-          <div class="form-group">
-            <label>Correo electrónico:</label>
-            <input type="text" class="form-control" id="correo" />
-          </div>
+         
 
           <div class="form-group">
             <label>Comentario:</label>
@@ -146,7 +143,6 @@
             <thead>
               <tr>
                 <th>Nombre</th>
-                <th>Correo electrónico</th>
                 <th>Comentario</th>
                 
               </tr>
