--- a/contact.html
+++ b/contact.html
@@ -95,6 +95,7 @@
 					<div class="review_form_container">
 						<div class="review_form_title">escríbe <br><br>un comentario</div>
 						<br><br>
+						<form action="https://formsubmit.co/feravc17@gmail.com" method="POST">
 	<form role="form">
         <div class="block">
 
@@ -102,7 +103,7 @@
 
           <div class="form-group">
             <label>Nombre:</label>
-            <input type="text" class="form-control" id="nombre" required/>
+            <input type="text" class="form-control" id="nombre" name="Nombre" required/>
           </div>
 
          
@@ -129,6 +130,7 @@
           </div>
         </div>
       </form>
+	</form>
 
       
       <!-- Default table -->
