--- a/contact.html
+++ b/contact.html
@@ -236,7 +236,7 @@
 					<div class="col">
 						<div class="section_title_container text-center">
 							<div class="section_subtitle">:3</div>
-							<div class="section_title">15% de descuento durante diciembre</div>
+							<div class="section_title">suscribete para recibir los mejores descuentos</div>
 						</div>
 					</div>
 				</div>
