--- a/contact.html
+++ b/contact.html
@@ -247,7 +247,8 @@
 									<div class="newsletter_form_container">
 										
 										<form action="https://formsubmit.co/feravc17@gmail.com" method="POST">
-											<input type="email" class="newsletter_input" required="required" placeholder="Ingresa tu correo electrónico" name="Correo electrónico:">
+											
+											<input type="email" class="newsletter_input" required="required" placeholder="Correo electrónico" name="Correo electrónico">
 											<button type="submit" class="newsletter_button">Suscríbete</button>
 										</form>
 									</div>
