--- a/categories.html
+++ b/categories.html
@@ -413,12 +413,9 @@
 					</div>
 				</div>
 					
-			
-	    </div>
-		</div>
-		</div>
-		</div>
 		
+		
+		</body>
 			
 		</div>
 		<!-- BORRÉ LOS NÚMEROS QUE ESTABAN A LA DERECHA EN MEDIO DE LA PÁGINA -->
@@ -429,9 +426,9 @@
 			<!-- Promo 1 -->
 			<div class="sidebar_promo_1 sidebar_promo d-flex flex-column align-items-center justify-content-center">
 				<div class="sidebar_promo_image" style="background-image: url(images/gomitas.jpeg)"></div>
-				<div class="sidebar_promo_content text-center">
-					<div class="sidebar_promo_title"><a href="https://www.instagram.com/malvart_g/"></a>Haz tu pedido</div>
-					<div class="sidebar_promo_subtitle"></div>
+				<div class="sidebar_promo_content text-center"><a href="https://www.instagram.com/malvart_g/">
+					<div class="sidebar_promo_title">Haz tu pedido</div>
+					<div class="sidebar_promo_subtitle"></div></a>
 					
 				</div>
 			</div>
@@ -476,7 +473,7 @@
 			</div>
 		</div>
 	</div>
-</body>
+
 	<!-- Footer -->
 
 	<footer class="footer">
