--- a/categories.html
+++ b/categories.html
@@ -436,8 +436,8 @@
 			<!-- Promo 2 -->
 			<div class="sidebar_promo_2 sidebar_promo">
 				<div class="sidebar_promo_image" style="background-image: url(images/sidebar_4.jpg)"></div>
-				
-				
+			</div>
+			</div>
 				</div>
 			</div>
 		</div>
