--- a/contact.html
+++ b/contact.html
@@ -285,7 +285,7 @@
 						</ul>
 					</div>
 					<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos reservados | 2022<i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://www.instagram.com/malvart_g/" target="_blank">Malvart</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos reservados | <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://www.instagram.com/malvart_g/" target="_blank">Malvart</a>
 </div>
 				</div>
 			</div>
