--- a/contact.html
+++ b/contact.html
@@ -250,6 +250,7 @@
 											
 											<input type="email" class="newsletter_input" required="required" placeholder="Correo electrónico" name="Correo electrónico">
 											<button type="submit" class="newsletter_button">Suscríbete</button>
+											<input type="hidden" name="_next" value="https://feravalos17.github.io/Malvart-Artesanias/contact.html">
 										</form>
 									</div>
 						</div>
