--- a/contact.html
+++ b/contact.html
@@ -251,6 +251,8 @@
 											<input type="email" class="newsletter_input" required="required" placeholder="Correo electrónico" name="Correo electrónico">
 											<button type="submit" class="newsletter_button">Suscríbete</button>
 											<input type="hidden" name="_next" value="https://feravalos17.github.io/Malvart-Artesanias/contact.html">
+											<input type="hidden" name="_autoresponse" value="Gracias por suscribirse a Malvart Artesanías,
+																							esperamos que el sitio haya sido de su agrado :). ">
 										</form>
 									</div>
 						</div>
